# deep-research-agent

./: .env.example  .gitignore  AGENTS.md  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
data/: corpus.jsonl  questions.jsonl
docs/: architecture.md
reports/: research_report_example.md
src/research_agent/: __init__.py  agents.py  cli.py  config.py  corpus.py  evals.py  manager.py  report.py  schemas.py
tests/: test_agents.py  test_budget.py  test_corpus.py  test_manager.py
