[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "deep-research-agent"
version = "0.1.0"
description = "A manager-pattern research agent: a coordinator orchestrates planner / searcher / synthesizer / fact-checker / writer sub-agents (agents-as-tools), under a hard step+search budget, producing a cited report behind a faithfulness gate. Fully offline."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Taha Siddiqui", email = "work.tahasiddiqui@gmail.com" }]
keywords = [
  "ai-agents", "agentic-workflow", "manager-pattern", "agents-as-tools",
  "deep-research", "rag", "fact-checking", "faithfulness", "cost-budget",
  "citations", "llmops", "python",
]
classifiers = [
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "License :: OSI Approved :: MIT License",
]
dependencies = [
  "rank-bm25>=0.2.2",
  "pydantic>=2.7",
  "pydantic-settings>=2.2",
  "rich>=13.7",
  "python-dotenv>=1.0",
]

[project.optional-dependencies]
openai = ["openai>=1.30"]
anthropic = ["anthropic>=0.30"]
dev = ["ruff>=0.6", "pytest>=8.2", "pre-commit>=3.7"]

[project.scripts]
research-agent = "research_agent.cli:main"

[project.urls]
Homepage = "https://github.com/tahasiddiquii/deep-research-agent"
Source = "https://github.com/tahasiddiquii/deep-research-agent"

[tool.hatch.build.targets.wheel]
packages = ["src/research_agent"]

[tool.ruff]
line-length = 110
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "C4"]
ignore = ["E501", "B008", "UP042"]

[tool.pytest.ini_options]
pythonpath = ["src", "."]
addopts = "-q"
testpaths = ["tests"]
